bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
typedef struct whiteout_MdxModel whiteout_MdxModel;
typedef struct whiteout_MdxSequence whiteout_MdxSequence;
typedef struct whiteout_MdxTexture whiteout_MdxTexture;
typedef struct whiteout_MdxSound whiteout_MdxSound;
typedef struct whiteout_MdxSoundEmitter whiteout_MdxSoundEmitter;
typedef struct whiteout_MdxMaterial whiteout_MdxMaterial;
typedef struct whiteout_MdxTextureAnimation whiteout_MdxTextureAnimation;
typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
typedef struct whiteout_MdxGeosetAnimation whiteout_MdxGeosetAnimation;
typedef struct whiteout_MdxBone whiteout_MdxBone;
typedef struct whiteout_MdxLight whiteout_MdxLight;
typedef struct whiteout_MdxHelper whiteout_MdxHelper;
typedef struct whiteout_MdxAttachment whiteout_MdxAttachment;
typedef struct whiteout_MdxParticleEmitter whiteout_MdxParticleEmitter;
typedef struct whiteout_MdxParticleEmitter2 whiteout_MdxParticleEmitter2;
typedef struct whiteout_MdxRibbonEmitter whiteout_MdxRibbonEmitter;
typedef struct whiteout_MdxEventObject whiteout_MdxEventObject;
typedef struct whiteout_MdxCamera whiteout_MdxCamera;
typedef struct whiteout_MdxCollisionShape whiteout_MdxCollisionShape;
typedef struct whiteout_MdxFaceEffect whiteout_MdxFaceEffect;
typedef struct whiteout_MdxCornEmitter whiteout_MdxCornEmitter;
/* ── MdxExtent ─────────────────────────────────────────────── */

whiteout_MdxExtent* whiteout_mdx_MdxExtent_new(void);
void whiteout_mdx_MdxExtent_delete(whiteout_MdxExtent* self);
float whiteout_mdx_MdxExtent_get_boundsRadius(const whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_boundsRadius(whiteout_MdxExtent* self, float value);
whiteout_Vector3f* whiteout_mdx_MdxExtent_get_minimum(whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_minimum(whiteout_MdxExtent* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_mdx_MdxExtent_get_maximum(whiteout_MdxExtent* self);
void whiteout_mdx_MdxExtent_set_maximum(whiteout_MdxExtent* self, const whiteout_Vector3f* value);
/* ── MdxModel ─────────────────────────────────────────────── */

/* Complete MDX model file structure */
/*  */
/* This structure represents an entire MDX model, including all geometry, materials, animations, and metadata. It can represent models from Warcraft III Classic (version 800) through Reforged (version 1200). */
/*  */
/* The structure is organized into chunks, each containing a specific type of data. Not all chunks are required - optional chunks can have empty vectors. */
whiteout_MdxModel* whiteout_mdx_MdxModel_new(void);
void whiteout_mdx_MdxModel_delete(whiteout_MdxModel* self);
/* MDX version: 800 (Classic), 900, 1000, 1100, 1200 (Reforged) */
uint32_t whiteout_mdx_MdxModel_get_version(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_version(whiteout_MdxModel* self, uint32_t value);
/* Name of the model */
whiteout_CString whiteout_mdx_MdxModel_get_modelName(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_modelName(whiteout_MdxModel* self, const char* value);
/* Path to external animation file (rarely used) */
whiteout_CString whiteout_mdx_MdxModel_get_animationFileName(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_animationFileName(whiteout_MdxModel* self, const char* value);
/* Time in milliseconds to blend between animations */
uint32_t whiteout_mdx_MdxModel_get_blendTime(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_set_blendTime(whiteout_MdxModel* self, uint32_t value);
/* Named animation sequences */
size_t whiteout_mdx_MdxModel_get_sequences_count(const whiteout_MdxModel* self);
whiteout_MdxSequence* whiteout_mdx_MdxModel_get_sequences_at(whiteout_MdxModel* self, size_t index);
/* Texture paths and settings */
size_t whiteout_mdx_MdxModel_get_textures_count(const whiteout_MdxModel* self);
whiteout_MdxTexture* whiteout_mdx_MdxModel_get_textures_at(whiteout_MdxModel* self, size_t index);
/* Sounds (deprecated) */
size_t whiteout_mdx_MdxModel_get_sounds_count(const whiteout_MdxModel* self);
whiteout_MdxSound* whiteout_mdx_MdxModel_get_sounds_at(whiteout_MdxModel* self, size_t index);
/* Sound emitters (deprecated) */
size_t whiteout_mdx_MdxModel_get_soundEmitters_count(const whiteout_MdxModel* self);
whiteout_MdxSoundEmitter* whiteout_mdx_MdxModel_get_soundEmitters_at(whiteout_MdxModel* self, size_t index);
/* Material definitions */
size_t whiteout_mdx_MdxModel_get_materials_count(const whiteout_MdxModel* self);
whiteout_MdxMaterial* whiteout_mdx_MdxModel_get_materials_at(whiteout_MdxModel* self, size_t index);
/* UV animation data */
size_t whiteout_mdx_MdxModel_get_textureAnimations_count(const whiteout_MdxModel* self);
whiteout_MdxTextureAnimation* whiteout_mdx_MdxModel_get_textureAnimations_at(whiteout_MdxModel* self, size_t index);
/* Mesh geometry */
size_t whiteout_mdx_MdxModel_get_geosets_count(const whiteout_MdxModel* self);
whiteout_MdxGeoset* whiteout_mdx_MdxModel_get_geosets_at(whiteout_MdxModel* self, size_t index);
/* Mesh visibility/color animation */
size_t whiteout_mdx_MdxModel_get_geosetAnimations_count(const whiteout_MdxModel* self);
whiteout_MdxGeosetAnimation* whiteout_mdx_MdxModel_get_geosetAnimations_at(whiteout_MdxModel* self, size_t index);
/* Skeleton bones */
size_t whiteout_mdx_MdxModel_get_bones_count(const whiteout_MdxModel* self);
whiteout_MdxBone* whiteout_mdx_MdxModel_get_bones_at(whiteout_MdxModel* self, size_t index);
/* Helper/attachment nodes */
size_t whiteout_mdx_MdxModel_get_helpers_count(const whiteout_MdxModel* self);
whiteout_MdxHelper* whiteout_mdx_MdxModel_get_helpers_at(whiteout_MdxModel* self, size_t index);
/* Equipment attachment points */
size_t whiteout_mdx_MdxModel_get_attachments_count(const whiteout_MdxModel* self);
whiteout_MdxAttachment* whiteout_mdx_MdxModel_get_attachments_at(whiteout_MdxModel* self, size_t index);
/* Pivot points for nodes */
size_t whiteout_mdx_MdxModel_get_pivotPoints_count(const whiteout_MdxModel* self);
const float* whiteout_mdx_MdxModel_get_pivotPoints_data(const whiteout_MdxModel* self);
/* Light sources */
size_t whiteout_mdx_MdxModel_get_lights_count(const whiteout_MdxModel* self);
whiteout_MdxLight* whiteout_mdx_MdxModel_get_lights_at(whiteout_MdxModel* self, size_t index);
/* Particle emitters v1 */
size_t whiteout_mdx_MdxModel_get_particleEmitters_count(const whiteout_MdxModel* self);
whiteout_MdxParticleEmitter* whiteout_mdx_MdxModel_get_particleEmitters_at(whiteout_MdxModel* self, size_t index);
/* Particle emitters v2 */
size_t whiteout_mdx_MdxModel_get_particleEmitters2_count(const whiteout_MdxModel* self);
whiteout_MdxParticleEmitter2* whiteout_mdx_MdxModel_get_particleEmitters2_at(whiteout_MdxModel* self, size_t index);
/* Ribbon trail effects */
size_t whiteout_mdx_MdxModel_get_ribbonEmitters_count(const whiteout_MdxModel* self);
whiteout_MdxRibbonEmitter* whiteout_mdx_MdxModel_get_ribbonEmitters_at(whiteout_MdxModel* self, size_t index);
/* PopcornFX emitters (Reforged) */
size_t whiteout_mdx_MdxModel_get_cornEmitters_count(const whiteout_MdxModel* self);
whiteout_MdxCornEmitter* whiteout_mdx_MdxModel_get_cornEmitters_at(whiteout_MdxModel* self, size_t index);
/* Animation event triggers */
size_t whiteout_mdx_MdxModel_get_eventObjects_count(const whiteout_MdxModel* self);
whiteout_MdxEventObject* whiteout_mdx_MdxModel_get_eventObjects_at(whiteout_MdxModel* self, size_t index);
/* Camera definitions */
size_t whiteout_mdx_MdxModel_get_cameras_count(const whiteout_MdxModel* self);
whiteout_MdxCamera* whiteout_mdx_MdxModel_get_cameras_at(whiteout_MdxModel* self, size_t index);
/* Collision geometry */
size_t whiteout_mdx_MdxModel_get_collisionShapes_count(const whiteout_MdxModel* self);
whiteout_MdxCollisionShape* whiteout_mdx_MdxModel_get_collisionShapes_at(whiteout_MdxModel* self, size_t index);
/* Facial effects (Reforged) */
size_t whiteout_mdx_MdxModel_get_faceEffects_count(const whiteout_MdxModel* self);
whiteout_MdxFaceEffect* whiteout_mdx_MdxModel_get_faceEffects_at(whiteout_MdxModel* self, size_t index);
/* ── MdxSequence ─────────────────────────────────────────────── */

/* Animation sequence definition */
/*  */
/* Sequences define named animation clips with specific frame ranges. Examples: "Stand", "Walk", "Attack", "Death" */
whiteout_MdxSequence* whiteout_mdx_MdxSequence_new(void);
void whiteout_mdx_MdxSequence_delete(whiteout_MdxSequence* self);
/* Sequence name (e.g., "Stand", "Walk") */
whiteout_CString whiteout_mdx_MdxSequence_get_name(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_name(whiteout_MdxSequence* self, const char* value);
/* Starting frame number */
uint32_t whiteout_mdx_MdxSequence_get_intervalStart(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_intervalStart(whiteout_MdxSequence* self, uint32_t value);
/* Ending frame number (exclusive) */
uint32_t whiteout_mdx_MdxSequence_get_intervalEnd(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_intervalEnd(whiteout_MdxSequence* self, uint32_t value);
/* Movement speed during this animation */
float whiteout_mdx_MdxSequence_get_moveSpeed(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_moveSpeed(whiteout_MdxSequence* self, float value);
/* Playback flags */
int32_t whiteout_mdx_MdxSequence_get_flags(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_flags(whiteout_MdxSequence* self, int32_t value);
/* Rarity factor for variation sequences */
float whiteout_mdx_MdxSequence_get_rarity(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_rarity(whiteout_MdxSequence* self, float value);
/* Sync point for blending */
uint32_t whiteout_mdx_MdxSequence_get_syncPoint(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_syncPoint(whiteout_MdxSequence* self, uint32_t value);
/* ── MdxTexture ─────────────────────────────────────────────── */

/* Texture definition */
/*  */
/* Defines a texture file path and its properties. */
whiteout_MdxTexture* whiteout_mdx_MdxTexture_new(void);
void whiteout_mdx_MdxTexture_delete(whiteout_MdxTexture* self);
uint32_t whiteout_mdx_MdxTexture_get_replaceableId(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_replaceableId(whiteout_MdxTexture* self, uint32_t value);
/* Path to texture file (BLP, DDS or TGA) */
whiteout_CString whiteout_mdx_MdxTexture_get_fileName(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_fileName(whiteout_MdxTexture* self, const char* value);
/* Texture wrap flags */
int32_t whiteout_mdx_MdxTexture_get_flags(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_flags(whiteout_MdxTexture* self, int32_t value);
/* ── MdxSound ─────────────────────────────────────────────── */

/* Sound definition (deprecated, not used in shipped models) */
/*  */
/* Sounds define audio file paths and playback properties. While readers for this chunk exist in the internal game code, no known shipped model contains SNDS data. */
/*  */
/* Binary layout: 56 bytes per entry */
whiteout_MdxSound* whiteout_mdx_MdxSound_new(void);