bindings/csharp/Whiteout/Mdx/NativeMethods.Mdx.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Mdx.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxExtent_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxExtent_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxExtent_get_boundsRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxExtent_set_boundsRadius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxExtent_get_minimum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxExtent_set_minimum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxExtent_get_maximum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxExtent_set_maximum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxModel_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxModel_get_version(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxModel_set_version(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxModel_get_modelName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxModel_set_modelName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxModel_get_animationFileName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxModel_set_animationFileName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxModel_get_blendTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxModel_set_blendTime(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_sequences_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_sequences_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_textures_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_textures_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_sounds_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_sounds_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_soundEmitters_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_soundEmitters_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_materials_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_materials_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_textureAnimations_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_textureAnimations_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_geosets_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_geosets_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_geosetAnimations_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_geosetAnimations_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_bones_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_bones_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_helpers_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_helpers_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_attachments_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_attachments_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_pivotPoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_pivotPoints_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_lights_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_lights_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_particleEmitters_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_particleEmitters_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_particleEmitters2_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_particleEmitters2_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_ribbonEmitters_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_ribbonEmitters_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_cornEmitters_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_cornEmitters_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_eventObjects_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_eventObjects_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_cameras_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_cameras_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_collisionShapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_collisionShapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxModel_get_faceEffects_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxModel_get_faceEffects_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxSequence_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxSequence_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxSequence_get_intervalStart(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_intervalStart(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxSequence_get_intervalEnd(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_intervalEnd(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxSequence_get_moveSpeed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_moveSpeed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxSequence_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxSequence_get_rarity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_rarity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxSequence_get_syncPoint(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSequence_set_syncPoint(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTexture_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTexture_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxTexture_get_replaceableId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTexture_set_replaceableId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxTexture_get_fileName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTexture_set_fileName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxTexture_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTexture_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxSound_new();
